[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Entities/Gyne.png" type="Texture" id=1]
[ext_resource path="res://Entities/AntcestorGyne.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Shadow.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Circle.png" type="Texture" id=4]
[ext_resource path="res://Sprites/A.png" type="Texture" id=5]
[ext_resource path="res://Sprites/D.png" type="Texture" id=6]
[ext_resource path="res://Entities/Highlight.gd" type="Script" id=7]
[ext_resource path="res://Entities/EggTimer.gd" type="Script" id=8]

[node name="AntcestorGyne" type="Sprite" groups=[
"Arena",
]]
z_index = 3
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="WASDIcons" type="Node2D" parent="."]
z_index = 10

[node name="A" type="Sprite" parent="WASDIcons"]
position = Vector2( -128, 0 )
texture = ExtResource( 5 )

[node name="Circle" type="Sprite" parent="WASDIcons/A"]
self_modulate = Color( 1, 1, 1, 0.247059 )
texture = ExtResource( 4 )

[node name="D" type="Sprite" parent="WASDIcons"]
position = Vector2( 128, 0 )
texture = ExtResource( 6 )

[node name="Circle" type="Sprite" parent="WASDIcons/D"]
self_modulate = Color( 1, 1, 1, 0.247059 )
texture = ExtResource( 4 )

[node name="ColorTween" type="Tween" parent="WASDIcons"]

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="Shadow" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.247059 )
z_index = 1
z_as_relative = false
texture = ExtResource( 3 )
offset = Vector2( 0, 32 )

[node name="ShadowTween" type="Tween" parent="Shadow"]

[node name="Highlight" type="Sprite" parent="."]
z_index = 20
script = ExtResource( 7 )

[node name="ColorTween" type="Tween" parent="Highlight"]

[node name="ShakeTween" type="Tween" parent="."]

[node name="ShakeTimer" type="Timer" parent="ShakeTween"]
wait_time = 0.2
one_shot = true

[node name="VisibilityTween" type="Tween" parent="."]

[node name="EggTimer" type="Node2D" parent="."]
position = Vector2( -64, -64 )
script = ExtResource( 8 )
[connection signal="timeout" from="AnimationTimer" to="." method="_on_AnimationTimer_timeout"]
[connection signal="tween_completed" from="Highlight/ColorTween" to="Highlight" method="_on_ColorTween_tween_completed"]
[connection signal="timeout" from="ShakeTween/ShakeTimer" to="." method="_on_ShakeTimer_timeout"]
